<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Merry">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/meet_merry"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/merry__1_"
        android:contentDescription="@string/sittingPretty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMerry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnJett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jett"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCare"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/care"
            app:layout_constraintEnd_toStartOf="@+id/btnFAQ"
            tools:layout_editor_absoluteY="683dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="652dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/aboutMerry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_merry"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/galleryMerry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_of_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aboutMerry"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>