<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FAQ">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:text="@string/faq"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="384dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/question1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHomeF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMerry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954" />

        <Button
            android:id="@+id/btnJettF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jett"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCare" />

        <Button
            android:id="@+id/btnMerryF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merry"
            app:layout_constraintEnd_toStartOf="@+id/btnFAQ"
            tools:layout_editor_absoluteY="683dp" />

        <Button
            android:id="@+id/btnCareF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/care"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="652dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="344dp"
        android:layout_height="177dp"
        android:text="@string/answer1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="394dp"
        android:layout_height="33dp"
        android:text="@string/question2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="294dp"
        android:layout_height="189dp"
        android:text="@string/answer2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>