<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Jett">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/meet_jett"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMerry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMerry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCare"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/care"
            app:layout_constraintEnd_toStartOf="@+id/btnFAQ"
            tools:layout_editor_absoluteY="683dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="652dp"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/relaxed_jett"
        android:contentDescription="@string/armsInAir" />

    <Button
        android:id="@+id/aboutJett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/about_jett"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/galleryJett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/gallery_of_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/aboutJett" />


</androidx.constraintlayout.widget.ConstraintLayout>