<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".JettGallery">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnJett"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnJett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jett"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCare"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/care"
            app:layout_constraintEnd_toStartOf="@+id/btnFAQ"
            tools:layout_editor_absoluteY="683dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="652dp"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    app:srcCompat="@drawable/atshelter"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="139dp"
                    android:contentDescription="@string/babyMerry" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView20"
                    android:layout_marginTop="11dp"
                    android:text="@string/shelter"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView20" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/arm_of_couch"
                    android:contentDescription="@string/couch" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView22"
                app:layout_constraintTop_toBottomOf="@+id/imageView21" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/dreaming_of_pink"
                    android:contentDescription="@string/pinkBlanket" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeping"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView23"
                app:layout_constraintTop_toBottomOf="@+id/imageView22" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="400dp"
                    android:layout_height="700dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/hiding"
                    android:contentDescription="@string/hiding" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hiding"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView23" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="400dp"
                    android:layout_height="700dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/merry_stroller"
                    android:contentDescription= "@string/walk" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/walk"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />


        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>